# msstorelib

./: .editorconfig  .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: publish.yml
.run/: Build native lib.run.xml  Publish to Maven Local.run.xml
gradle/: libs.versions.toml
native/winrt/: CMakeLists.txt  msstore_winrt.cpp  msstore_winrt.h
src/main/kotlin/de/stefan_oltmann/msstore/: MsStore.kt  MsStoreLicense.kt  MsStoreLicenseException.kt  MsStoreNative.kt  MsStoreNativeHelpers.kt  MsStoreNativeLoader.kt  MsStorePurchase.kt  MsStoreRateAndReview.kt
src/main/kotlin/de/stefan_oltmann/msstore/model/: MsStoreAddOnLicenseInfo.kt  MsStoreLicenseInfo.kt  MsStoreLicenseStatus.kt  MsStorePurchaseStatus.kt  MsStoreRateAndReviewStatus.kt
src/test/kotlin/de/stefan_oltmann/msstore/: MsStorePurchaseStatusTest.kt  MsStoreRateAndReviewStatusTest.kt  StoreLicenseModelsTest.kt
